feat: AiSummaryService에 PromptBuilder 적용 및 Spring AI 기반으로 전환
- PromptBuilder로 프롬프트 생성 책임 분리
- RestTemplate 직접 호출 방식 제거, OpenAiChatService 사용으로 변경
- OpenAiRequest, OpenAiResponse DTO 삭제