@@ -1,9 +1,10 @@
 package com.example.medicare_call.service.ai;
 
-import com.example.medicare_call.dto.data_processor.ai.OpenAiResponse;
 import com.example.medicare_call.dto.report.HomeSummaryDto;
 import com.example.medicare_call.dto.statistics.WeeklyStatsAggregate;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.example.medicare_call.service.ai.prompt.HomeSummaryPromptBuilder;
+import com.example.medicare_call.service.ai.prompt.SymptomSummaryPromptBuilder;
+import com.example.medicare_call.service.ai.prompt.WeeklySummaryPromptBuilder;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -11,30 +12,41 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.ai.chat.messages.AssistantMessage;
+import org.springframework.ai.chat.model.ChatResponse;
+import org.springframework.ai.chat.model.Generation;
+import org.springframework.ai.openai.OpenAiChatOptions;
 import org.springframework.test.util.ReflectionTestUtils;
-import org.springframework.web.client.RestTemplate;
 
 import java.time.LocalDate;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class AiSummaryServiceTest {
 
     @Mock
-    private RestTemplate restTemplate;
+    private OpenAiChatService openAiChatService;
+
+    @Mock
+    private HomeSummaryPromptBuilder homeSummaryPromptBuilder;
+
+    @Mock
+    private WeeklySummaryPromptBuilder weeklySummaryPromptBuilder;
+
+    @Mock
+    private SymptomSummaryPromptBuilder symptomSummaryPromptBuilder;
 
     @InjectMocks
     private AiSummaryService aiSummaryService;
 
     @BeforeEach
     void setUp() {
-        ReflectionTestUtils.setField(aiSummaryService, "openaiApiKey", "test-api-key");
-        ReflectionTestUtils.setField(aiSummaryService, "openaiApiUrl", "https://api.openai.com/v1/chat/completions");
         ReflectionTestUtils.setField(aiSummaryService, "openaiModel", "gpt-3.5-turbo");
     }
 
@@ -50,14 +62,13 @@ class AiSummaryServiceTest {
                 .averageBloodSugar(110)
                 .build();
 
-        String expectedSummary = "저녁 식사를 거르셨고, 저녁 약 복용이 필요합니다. 잊지 않도록 챙겨주세요.";
-        
-        OpenAiResponse.Message message = OpenAiResponse.Message.builder().content(expectedSummary).build();
-        OpenAiResponse.Choice choice = OpenAiResponse.Choice.builder().message(message).build();
-        OpenAiResponse openAiResponse = OpenAiResponse.builder().choices(Collections.singletonList(choice)).build();
+        when(homeSummaryPromptBuilder.buildSystemMessage()).thenReturn("system");
+        when(homeSummaryPromptBuilder.buildPrompt(summaryDto)).thenReturn("prompt");
 
-        when(restTemplate.postForObject(any(String.class), any(), eq(OpenAiResponse.class)))
-                .thenReturn(openAiResponse);
+        String expectedSummary = "저녁 식사를 거르셨고, 저녁 약 복용이 필요합니다. 잊지 않도록 챙겨주세요.";
+        ChatResponse chatResponse = new ChatResponse(List.of(new Generation(new AssistantMessage(expectedSummary))));
+        when(openAiChatService.openAiChat(anyString(), anyString(), any(OpenAiChatOptions.class)))
+                .thenReturn(chatResponse);
 
         // when
         String actualSummary = aiSummaryService.getHomeSummary(summaryDto);
@@ -94,63 +105,18 @@ class AiSummaryServiceTest {
                 .afterMealBloodSugar(afterMeal)
                 .build();
 
+        when(weeklySummaryPromptBuilder.buildSystemMessage()).thenReturn("system");
+        when(weeklySummaryPromptBuilder.buildPrompt(weeklyStatsAggregate)).thenReturn("prompt");
+
         String expectedSummary = "이번 주 어르신은 건강 이상 신호가 3회, 케어콜 미응답이 1회 있었습니다. 어르신께 무슨 일이 없는지 확인이 필요해 보입니다. 약도 2회 누락되어 꾸준한 복용 지도가 필요합니다.";
-
-        OpenAiResponse.Message message = OpenAiResponse.Message.builder()
-                .content(expectedSummary)
-                .build();
-        OpenAiResponse.Choice choice = OpenAiResponse.Choice.builder()
-                .message(message)
-                .build();
-        OpenAiResponse openAiResponse = OpenAiResponse.builder()
-                .choices(Collections.singletonList(choice))
-                .build();
-
-        when(restTemplate.postForObject(any(String.class), any(), eq(OpenAiResponse.class)))
-                .thenReturn(openAiResponse);
+        ChatResponse chatResponse = new ChatResponse(List.of(new Generation(new AssistantMessage(expectedSummary))));
+        when(openAiChatService.openAiChat(anyString(), anyString(), any(OpenAiChatOptions.class)))
+                .thenReturn(chatResponse);
 
         // when
         String actualSummary = aiSummaryService.getWeeklyStatsSummary(weeklyStatsAggregate);
 
         // then
         assertEquals(expectedSummary, actualSummary);
-    }
-
-    @Test
-    @DisplayName("OpenAI API 응답 JSON 파싱 테스트 - 알 수 없는 필드 무시")
-    void openAiResponseJsonParsing_ignoreUnknownProperties() throws Exception {
-        // given - OpenAI API의 실제 응답 형태를 시뮬레이트
-        String jsonResponse = """
-                {
-                    "id": "chatcmpl-123",
-                    "object": "chat.completion",
-                    "created": 1692901427,
-                    "model": "gpt-3.5-turbo-0613",
-                    "choices": [
-                        {
-                            "index": 0,
-                            "message": {
-                                "role": "assistant",
-                                "content": "테스트 응답입니다."
-                            },
-                            "finish_reason": "stop"
-                        }
-                    ],
-                    "usage": {
-                        "prompt_tokens": 100,
-                        "completion_tokens": 20,
-                        "total_tokens": 120
-                    }
-                }
-                """;
-
-        ObjectMapper objectMapper = new ObjectMapper();
-
-        // when - JSON을 OpenAiResponse 객체로 파싱
-        OpenAiResponse response = objectMapper.readValue(jsonResponse, OpenAiResponse.class);
-
-        // then - 필요한 필드만 제대로 파싱되고 알 수 없는 필드는 무시됨
-        assertEquals(1, response.getChoices().size());
-        assertEquals("테스트 응답입니다.", response.getChoices().get(0).getMessage().getContent());
     }
 }
